# Autonomous-Drone-Navigation-TD3-vs-SAC

./: README.md
SAC_Drone/ros2_gz_pkg/: package.xml  setup.py
SAC_Drone/ros2_gz_pkg/launch/: iris_maze.launch.py
SAC_Drone/ros2_gz_pkg/launch/robots/: iris_lidar.launch.py
SAC_Drone/ros2_gz_pkg/models/ground_plane/: model.sdf
SAC_Drone/ros2_gz_pkg/models/iris_rplidar/: iris_rplidar.sdf
SAC_Drone/ros2_gz_pkg/models/lidar_3d_v2/: model.sdf
SAC_Drone/ros2_gz_pkg/rviz/: drone_sensors.rviz
SAC_Drone/ros2_gz_pkg/worlds/: harmonic.sdf  iris_maze.sdf  msrworld.world  training_env.sdf
TD3/: CMakeLists.txt  README.md  package.xml
TD3/launch/: training_env.launch.py  training_world.launch.py  training_world.launch2.py  warehouse.launch.py  x500_warehouse.launch.py
TD3/models/Camera/: model.config  model.sdf
TD3/models/Mecanum lift/: model.config  model.sdf
TD3/models/basement_tank/: model (Copy).sdf  model.sdf
TD3/models/gps/: model.config  model.sdf
TD3/models/iris/: iris.sdf
TD3/models/iris_rplidar/: model.config  model.sdf
TD3/models/iris_with_lidar/: model.sdf
TD3/models/lidar_2d_v2/: model.config
TD3/models/lidar_3d/: model.config  model.sdf
TD3/models/meccanum/: model.config  model.sdf
TD3/models/nist_maze_wall_120/: model.config
TD3/models/nist_maze_wall_120a/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
TD3/models/nist_maze_wall_120b/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
TD3/models/nist_maze_wall_120c/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
TD3/models/nist_maze_wall_240a/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
TD3/models/nist_maze_wall_240b/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
TD3/models/rubicon/: model.config  model.sdf
TD3/models/walldebrisdouble/: model.config  model.sdf
TD3/models/walldebrisdouble1/: metadata.pbtxt  model.config  model.sdf
TD3/models/walldebrisdouble2/: model.config  model.sdf
TD3/models/warehouse/: model.sdf
TD3/models/x500_lidar/: model.sdf
TD3/rviz/: config.rviz
TD3/scripts/: aut.py  aut2.py  aut3.py  checks.py  contrl_node.py  rc_check.py  simulation-gazebo.py  sqr_with_obs
TD3/worlds/: iris_lidar_warehouse.sdf  rubicon.sdf  training_env.sdf  warehouse.sdf  x500_warehouse.sdf
(+372 files in other folders)
