<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_launch_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shibin@todo.todo">shibin</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ardupilot_gazebo</exec_depend>
  <exec_depend>ardupilot_gz_description</exec_depend>
  <exec_depend>ardupilot_gz_gazebo</exec_depend>
  <exec_depend>ardupilot_sitl</exec_depend>
  <exec_depend>ardupilot_sitl_models</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <!-- TODO this installs ignition -->
  <exec_depend>ros_gz_bridge</exec_depend>  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>



